<resources>
    <string name="app_name">PDAM Surakarta</string>
    <string name="image_logo">Image Logo</string>
    <string name="no_internet_connection">Koneksi bermasalah</string>
    <string name="refresh_info">Sepertinya anda tidak terkoneksi dengan internet, silahkan coba lagi</string>
    <string name="refresh">Refresh</string>
    <string name="surakarta">Surakarta</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="balance">Saldo</string>
    <string name="nominal_balance">Nominal Saldo</string>
    <string name="greeting">Halo,</string>
    <string name="logout">Logout</string>
    <string name="payment">Pembayaran PDAM</string>
    <string name="report">Laporan Transaksi</string>
    <string name="hint_product">Pilih Produk</string>
    <string name="hint_number_meter">Nomor Pelanggan</string>
    <string name="check">Cek</string>
    <string name="payment_inquiry">Pembayaran</string>
    <string name="print">Cetak</string>
    <string name="share">Share</string>
    <string name="status_transaction">TRANSAKSI SUKSES</string>
    <string name="oke">Oke</string>
    <string name="error_pelanggan">Masukkan Nomor Pelanggan</string>
    <string name="until_date">s/d Tanggal :</string>
    <string name="from_date">Dari Tanggal :</string>
    <string name="error_input">Harus diisi</string>
    <string name="id">id</string>
    <string name="back">Kembali</string>
    <string name="device_not_support_bluetooth">Device ini tidak support bluetooth</string>
    <string name="setting_printer">Printer belum di setting</string>
    <string name="setting">Setting Printer</string>
    <string name="click_settings">Klik settings untuk mengatur printer</string>
    <string name="success">Sukses</string>
    <string name="success_print">Berhasil Print</string>
    <string name="failed_print">Gagal Print, Silahkan Pilih Printer</string>
    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="dotmatrix">Dotmatrix</string>
    <string name="choose_printer">Pilih Printer</string>
    <string name="type_printer">Jenis Printer</string>
    <string name="printer_bluetooth">Printer Bluetooth</string>
    <string name="save">Save</string>
    <string name="test">Test</string>
    <string name="choose">Pilih</string>
    <string name="thermal">Thermal</string>
    <string name="no_device_paired">Tidak ada device yang terpasang</string>
    <string name="loading">Loading....</string>
    <string name="payment_process">Bayar PDAM Surakarta</string>
    <string name="printing">Printing</string>
    <string name="success_save">Berhasil di save</string>
    <string name="pay">Bayar</string>
    <string name="month">Periode :</string>
    <string name="cancel">Batal</string>
    <string name="inquiry">Inquiry</string>
    <string name="date">Tanggal</string>
    <string name="no_meter_id_pel">Id Pelanggan</string>
    <string name="check_all_transaction">Cetak Ulang Transaksi Anda</string>
    <string name="reprint">Cetak Ulang</string>
    <string name="double_back_info">Tekan lagi untuk keluar</string>
    <string name="tele_android">tele-android-</string>
    <string name="indonesia">-indonesia</string>
    <string name="auth_login">auth/login</string>
    <string name="register_token">content/register_token_fcm</string>
    <string name="product_pdam">TELE-PDAM-SURAKARTA_V2</string>
    <string name="check_status">trx_androsolo/cek_status</string>
    <string name="trx_pay">trx_androsolo/payment</string>
    <string name="content_menu">content/menu</string>
    <string name="trx_inquiry">trx_androsolo/inquiry</string>
    <string name="content_rekap_peruser">content/rekap_peruser</string>
    <string name="bill">Bill Data</string>
    <string name="list_bill">Daftar Tagihan :</string>
    <string name="payment_detail">Detail Pembayaran</string>
    <string name="tagihan_title">Tagihan</string>
    <string name="denda_title">Denda</string>
    <string name="admin_title">Biaya Admin</string>
    <string name="total_pembayaran_title">Total Pembayaran</string>
    <string name="powered_by">Powered by PT Teleanjar Indonesia</string>
</resources>
